# weather_project

./: .bandit.yml  .dockerignore  .flake8  Dockerfile  Makefile  README.md  debug.py  gcs-key.json  gunicorn.conf.py  openapi.yaml  pyproject.toml  pytest.ini
service/: __init__.py  __main__.py  app.py  config.py
service/api/: __init__.py
service/api/apispec/: apispec_controller.py  apispec_test.py
service/api/healthcheck/: healthcheck_controller.py  healthcheck_test.py
service/api/weather/: weather_controller.py  weather_logic.py  weather_validation.py
service/libs/data/: __init__.py  data.py
service/libs/exception_handler/: exception_handler.py
service/libs/logger/: __init__.py  logger.py
service/libs/pubsub/: __init__.py  message.py  publisher.py
